Prevent add/remove buttons of wrapping on new line on small screens

--- a/client/src/scss/index.scss
+++ b/client/src/scss/index.scss
@@ -182,6 +182,10 @@ ul {
 	margin-right: 0.25rem;
 }
 
+.table-date-change {
+	min-width: 274px;
+}
+
 @media screen and (max-width: 560px) {
 	.homepage-text li {
 		font-size: 14px;
